--- a/card/templates/card/articles.html
+++ b/card/templates/card/articles.html
@@ -1,17 +1,70 @@
 {% extends "card/base_generic.html" %}
+{% load static %}
 
 {% block title %}
     <title>Статьи</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 {% endblock %}
 
 {% block content %}
     {% if latest_article_list %}
         <ul>
         {% for article in latest_article_list %}
-            <li><a href="{% url 'detail' article.id  %}">{{ article.title }}</a></li>
+            <div class="card my-3">
+                <h5 class="card-header">
+                    <div class="row">
+                        <div class="col-8">
+                            {{ article.title }}
+                            {% if user.is_authenticated %}
+                                {% if article.public %}
+                                    <i class="bi bi-eye"></i>
+                                {% else %}
+                                    <i class="bi bi-eye-slash"></i>
+                                {% endif %}
+                            {% endif %}
+                        </div>
+                        {% if user.is_authenticated %}
+                        <div class="col-2">
+                            <a href="{% url 'edit_article' article.id  %}"><i class="bi bi-pencil"></i> Редактировать</a>
+                        </div>
+                        <div class="col-2">
+                            <a href="" name="{{ article.id  }}" class="link-danger delete"><i class="bi bi-trash"></i> Удалить</a>
+                        </div>
+                        {% endif %}
+                    </div>
+                </h5>
+                <div class="card-body" style="transform: rotate(0);">
+                    {% autoescape off %}
+                        <div class="card-text">{{ article.text |truncatechars_html:100 }}</div>
+                    {% endautoescape %}
+                  <a href="{% url 'detail' article.id  %}" class="btn btn-outline-secondary stretched-link">Читать</a>
+                </div>
+              </div>
+            {% if user.is_authenticated %}
+            <div class="modal fade" id="{{ 'modal' }}{{ article.id }}" tabindex="-1" aria-labelledby="{{ 'modalLabel' }}{{ article.id }}" aria-hidden="true">
+                <div class="modal-dialog alert alert-danger">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="{{ 'modalLabel' }}{{ article.id }}">Вы уверены, что хотите удалить статью?</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+
+                  <div class="modal-footer">
+                      <button type="button" class="btn btn-danger" id="{{ 'delete' }}{{ article.id }}">Удалить</button>
+                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Отмена</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            {% endif %}
         {% endfor %}
         </ul>
     {% else %}
         <p>Тут будут весёлые статьи. </p>
     {% endif %}
+{% endblock %}
+
+
+{% block script %}
+    <script src="{% static 'card/js/articles.js' %}"></script>
 {% endblock %}
