--- a/card/templates/card/base_generic.html
+++ b/card/templates/card/base_generic.html
@@ -1,9 +1,15 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
         {% block title %}{% endblock %}
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
         {% block style %}{% endblock %}
+        <script src="{% static 'card/js/LaTex_settings.js' %}" defer></script>
+        <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+        <script id="MathJax-script" defer src="{% static 'card/js/MathJax/tex-mml-chtml.js' %}"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     </head>
 
     <body>
@@ -29,11 +35,11 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'new_article' %}">Новая статья</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item mr-auto">
                         <a class="nav-link" href="{% url 'logout' %}">Выйти</a>
                     </li>
                     {% else %}
-                    <li class="nav-item">
+                    <li class="nav-item mr-auto">
                         <a class="nav-link" href="{% url 'login' %}">Войти</a>
                     </li>
                     {% endif %}
@@ -44,10 +50,6 @@
         {% endblock %}
         {% block content %}{% endblock %}
         </div>
-        <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-        <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
         {% block script %}{% endblock %}
     </body>
 </html>
