--- a/card/templates/registration/login.html
+++ b/card/templates/registration/login.html
@@ -1,13 +1,19 @@
 {% extends "card/base_generic.html" %}
+{% load static %}
 
 {% block title %}
     <title>Страница входа</title>
 {% endblock %}
 
+{% block style %}
+    <link rel="stylesheet" href="{% static 'card/css/login.css' %}">
+{% endblock %}
+
 {% block content %}
-    {% if form.errors %}
-    <p>Your username and password didn't match. Please try again.</p>
-    {% endif %}
+{#    {% if form.errors %}#}
+{##}
+{#    <p>Your username and password didn't match. Please try again.</p>#}
+{#    {% endif %}#}
 
     {% if next %}
     {% if user.is_authenticated %}
@@ -18,19 +24,36 @@
     {% endif %}
     {% endif %}
 
-    <form method="post" action="{% url 'login' %}">
+    <div class="main text-center">
+
+
+    <form method="post" class="form-login" action="{% url 'login' %}">
     {% csrf_token %}
-    <table>
-    <tr>
-        <td>{{ form.username.label_tag }}</td>
-        <td>{{ form.username }}</td>
-    </tr>
-    <tr>
-        <td>{{ form.password.label_tag }}</td>
-        <td>{{ form.password }}</td>
-    </tr>
-    </table>
-    <input type="submit" value="login">
-    <input type="hidden" name="next" value="{{ next }}">
+
+    {% if next %}
+        <input type="hidden" name="next" value="{{ next }}" />
+    {% endif %}
+
+    <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+    <div class="control-group">
+        <label class="control-label" for="username">Username</label>
+        <div class="controls">
+            <input class="form-control {% if form.errors %}is-invalid{% endif %}" type="text" id="username" name="username"  placeholder="Username">
+        </div>
+    </div>
+    <div class="control-group">
+        <label class="control-label" for="password">Password</label>
+        <div class="controls">
+            <input class="form-control {% if form.errors %}is-invalid{% endif %}" aria-describedby="invalid-feedback" type="password" name="password" id="password" placeholder="Password">
+        {% if form.errors %}
+        <div id="invalid-feedback" class="invalid-feedback">
+            Your username and password didn't match. Please try again.
+        </div>
+        {% endif %}
+        </div>
+    </div>
+
+    <button class="w-100 btn btn-lg btn-primary" type="submit" value="login">Войти</button>
     </form>
+    </div>
 {% endblock %}
